--- a/jeopardy.css
+++ b/jeopardy.css
@@ -75,12 +75,38 @@ header {
 html {
   background-color: #212351;
   color: white;
+  user-select: none;
 }
 .grow {
-  transform: scale(4);
-  font-size: 0.5em;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  margin-top: -50px;
+  margin-left: -50px;
+  transform: scale(5);
+  font-size: 5px;
   box-shadow: 10px 10px rgb(0, 0, 0, 50%);
   text-shadow: none;
   color: white;
   transition: all ease-in 1s;
+}
+#clue-window {
+  color: white;
+  background-color: #060ce9;
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+  width: 200px;
+  height: 110px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border: solid black 2px;
+}
+.clue-box {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.clicked {
+  pointer-events: none;
 }
