--- a/jeopardy.css
+++ b/jeopardy.css
@@ -92,16 +92,20 @@ html {
 }
 #clue-window {
   color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-left: 4px;
+  padding-right: 4px;
   background-color: #060ce9;
   font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
   width: 200px;
   height: 110px;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
   border: solid black 2px;
+  transition: all ease-in 1s;
 }
 .clue-box {
+  margin: auto;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -109,4 +113,33 @@ html {
 }
 .clicked {
   pointer-events: none;
+}
+
+#player-answer {
+  cursor: text;
+  font-size: 10px;
+  width: 100px;
+  text-align: center;
+  border: none;
+  margin-bottom: 4px;
+  margin-top: 7px;
+  background-color: rgb(255, 255, 255);
+}
+#player-answer:focus {
+  outline: none;
+}
+#player-answer:focus::placeholder {
+  color: transparent;
+}
+#submit-answer {
+  text-align: center;
+  cursor: pointer;
+  font-size: 7px;
+  width: 70px;
+  border-radius: 10px;
+  border: solid #212351 2px;
+  background-color: orange;
+}
+#submit-answer:hover {
+  background-color: rgb(255, 184, 53);
 }
