--- a/jeopardy.css
+++ b/jeopardy.css
@@ -24,6 +24,7 @@
 }
 
 .clue {
+  cursor: pointer;
   font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
   background-color: #060ce9;
   font-size: 3.5em;
